# tkinter_form

./: .gitignore  Log  prueba.py  pyproject.toml  readme.md  setup.py
api_reference/: field_form.html  field_form.md  index.md  tkinter_form.html  tkinter_form.md
api_referencie/: index.html
tk_form/: tk_form.py
tkinter_form/: __init__.py  field_form.py  tkinter_form.py
